# deps_icedtea-web

./: CMakeLists.txt
resources/: installer.xsl  netx_sources_list.txt  plugin_sources_list.txt
resources/itw_netx_cmake/: CMakeLists.txt
